parser/tests/bad/decl01-2.st
% re-declaration of identifier 'x'
%   constant

const i := 1
const i := 1
